ECRE/fix/pb de z-index sur le h2 du bingo gagné

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 99;
+  z-index: 101;
 }
 
 .logoCheminNav {
